--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,18 @@
 name: git_config
 description: A Dart CLI to fetch config files from a remote Git repository into the project.
-version: 1.0.0
+version: 1.1.0
 publisher: ttankkeo112@gmail.com
 repository: https://github.com/MTtankkeo/git_config
+keywords:
+  - cli
+  - config
+  - git
+  - fetch
+  - repository
+  - automation
+  - project-setup
+  - environment
+  - devops
 
 environment:
   sdk: '>=3.0.0 <4.0.0'
